--- a/src/index.css
+++ b/src/index.css
@@ -353,8 +353,6 @@ body {
   margin-left: 2rem;
 }
 
-.neutral__texts {
-}
 .neutral__image {
   width: 2rem;
 }
@@ -375,6 +373,21 @@ body {
   background-color: var(--color-red);
   border: 0;
   border-radius: 999px;
+}
+
+.class__box {
+  font-size: 1.5rem;
+  padding-top: 3rem;
+  padding-bottom: 1rem;
+}
+
+.class__title {
+  padding-bottom: 5px;
+  color: var(--color-red);
+}
+
+.class {
+  margin-right: 2rem;
 }
 
 @media screen and (max-width: 900px) {
